# django-test

./: .env.sample  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
currency_convert/: apps.py  forms.py  urls.py  views.py
currency_convert/templates/currency_convert/: currency_convert.html
home/: models.py  urls.py  views.py
home/migrations/: 0001_initial.py  0002_test_country.py
home/templates/: 404.html  about.html  basic.html  contact.html  dynamic_template.html  index.html
home/templates/project/: project.html
mysite/: settings.py  urls.py
school/: models.py
school/migrations/: 0001_initial.py
send_email/: forms.py  urls.py  views.py
send_email/templates/send_email/: email_sent.html  email_template.html  send_email.html
static/css/: currency_converter.css
temp/: views.py
